---
config:
  layout: elk
---
classDiagram
direction TB
    class User {
	    PK id_User INT NOT NULL
	    VARCHAR name NOT NULL
	    VARCHAR email
	    TEXT password_hash
	    VARCHAR cell_phone_number
	    BOOLEAN email_verified
	    DATETIME created_at
	    DATETIME updated_at
	    FK id_Role int NOT NULL
    }

    class Roles {
	    PK id_Role INT NOT NULL
	    VARCHAR name Admin | Prof | Student
	    TEXT description
	    DATETIME created_at
	    DATETIME updated_at
    }

    class Professor {
	    PK id_Professor INT NOT NULL
	    FK id_User INT NOT NULL
	    VARCHAR current_School
	    INT years_Experience
	    TEXT photo
	    TEXT biography
	    TEXT presentation_Video_URL
	    INT number_of_Sessions
	    VARCHAR VAT
	    VARCHAR IBAN
		TEXT IBAN_Document_URL
	    BOOLEAN is_Active
	    BOOLEAN is_Verified
	    DATETIME created_at
	    DATETIME updated_at
    }

    class Course {
	    PK id_Course INT NOT NULL
	    FK id_Professor
	    VARCHAR name NOT NULL
	    VARCHAR level_of_education
	    DATETIME created_at
	    DATETIME updated_at
    }

    class Certificate {
	    PK id_Certificate INT NOT NULL
	    FK id_Professor INT NOT NULL
	    VARCHAR name
	    TEXT file_URL
	    BOOLEAN verified
	    FK verified_by_user_id
	    DATETIME created_at
	    DATETIME updated_at
    }

    class Tutoring_Type {
	    PK id_Tutoring_Type INT NOT NULL
	    VARCHAR name    %% e.g. GROUP | INDIVIDUAL
	    VARCHAR description
	    DATETIME created_at
	    DATETIME updated_at
    }

    class Pricing_Model {
	    PK id_Pricing_Model INT NOT NULL
	    VARCHAR name       %% PER_SESSION_FIXED | PER_STUDENT_FIXED | PER_STUDENT_VARIABLE | TIERED
	    VARCHAR description
	    DATETIME created_at
	    DATETIME updated_at
    }

    class Day {
	    PK id_Day INT NOT NULL
	    VARCHAR name        %% e.g. Monday, Tuesday
	    INT day_index        %% 1=Monday .. 7=Sunday(ou conforme preferir)
    }

    class ScheduleBlock {
	    PK id_ScheduleBlock INT NOT NULL
	    FK id_Professor INT NOT NULL
	    FK id_Day INT
	    DATETIME start_time
	    DATETIME end_time
	    INT default_duration_minutes
	    BOOLEAN is_available
	    TEXT recurrence_rule
	    DATETIME created_at
	    DATETIME updated_at
    }

    class BlockPart {
	    PK id_BlockPart INT NOT NULL
	    FK id_ScheduleBlock INT NOT NULL
	    INT start_offset_minutes
	    INT end_offset_minutes
	    BOOLEAN is_available
    }

    class Lesson {
	    PK id_Lesson INT NOT NULL
	    FK id_Course INT
	    FK id_Professor INT
	    FK id_Tutoring_Type INT
	    FK id_Pricing_Model INT
	    VARCHAR title
	    INT capacity            %% max number of students for this lesson
	    INT min_students        %% mínimo de alunos permitidos
	    INT duration_minutes
	    DATETIME scheduled_start
	    DATETIME scheduled_end
	    BOOLEAN uses_custom_blocks
	    INT max_students        %% máximo de alunos permitidos(pode também servir para escalões simples)
	    DECIMAL base_price      %% base price(meaning depends on `pricing_mode` below)
    }

    class LessonPrice_BySession {
	    PK id_LessonPrice_BySession INT NOT NULL
	    FK id_Lesson INT NOT NULL
	    DECIMAL session_price
	    INT number_of_students
	    DECIMAL final_price_by_student
	    DATETIME created_at
	    DATETIME updated_at
    }

    class LessonPrice_ByStudent {
	    PK id_LessonPrice_ByStudent INT NOT NULL
	    FK id_Lesson INT NOT NULL
	    DECIMAL price_per_student
	    DATETIME created_at
	    DATETIME updated_at
    }

    class LessonPrice_Per_Student_Variable {
	    PK id_Price_Per_Student INT NOT NULL
	    FK id_Lesson INT NOT NULL
	    INT number_of_students
	    DECIMAL price_per_student
	    DATETIME created_at
	    DATETIME updated_at
    }

    class Enrollment {
	    PK id_Enrollment INT NOT NULL
	    FK id_Lesson INT NOT NULL
	    FK id_User INT NOT NULL
	    status : active | cancelled | completed
	    DECIMAL price_paid    %% permite registar preço no momento da inscrição
	    DATETIME created_at
    }

    class LessonScheduleBlock {
	    PK id_LessonScheduleBlock INT NOT NULL
	    FK id_Lesson INT NOT NULL
	    FK id_ScheduleBlock INT NOT NULL
	    FK id_BlockPart INT
	    DATETIME start_time
	    DATETIME end_time
    }

    class Reservation {
	    PK id_Reservation INT NOT NULL
	    FK id_User INT NOT NULL
	    FK id_Lesson INT NOT NULL
	    FK id_LessonScheduleBlock INT
	    FK id_ScheduleBlock INT
	    FK id_BlockPart INT
	    DATETIME start_time
	    DATETIME end_time
	    status : pending | confirmed | cancelled
	    DATETIME created_at
    }

    class ExceptionRequest {
	    PK id_ExceptionRequest INT NOT NULL
	    FK id_User INT
	    FK id_Reservation INT
	    FK id_Professor INT
	    request_type : extend | shorten | move | custom_time | block_unavailable
	    FK id_ExceptionRule INT
	    INT requested_duration_minutes
	    DATETIME requested_start
	    DATETIME requested_end
	    status : pending | approved | denied
	    TEXT reason
	    DATETIME created_at
    }

    class ExceptionRule {
	    PK id_ExceptionRule INT NOT NULL
	    FK id_Professor INT NOT NULL
	    FK id_ScheduleBlock INT
	    rule_type : unavailable | custom_duration | partial_unavailable
	    INT custom_duration_minutes
	    INT part_start_offset_minutes
	    INT part_end_offset_minutes
	    FK originating_request_id INT
	    DATETIME effective_from
	    DATETIME effective_to
	    TEXT note
    }

    class Notification {
	    PK id_Notification INT NOT NULL
	    FK id_User INT NOT NULL
	    VARCHAR type
	    VARCHAR message
	    BOOLEAN was_Read
	    DATETIME created_at
	    DATETIME updated_at
    }

    class Complaint {
	    PK id_Complaint INT NOT NULL
	    FK sender_User_Id INT NOT NULL
	    FK receiver_User_Id INT NULL
	    VARCHAR complaint_Type
	    VARCHAR complaint_Message
	    VARCHAR status
	    BOOLEAN is_Read
	    DATETIME created_at
	    DATETIME updated_at
    }

    class CallsAPIData {
	    PK id_CallsAPIData INT NOT NULL
	    VARCHAR channel_Name
	    VARCHAR project_Name
	    VARCHAR App_Id
	    VARCHAR Primary_Certificate
	    VARCHAR channel_Name
	    TEXT channel_Token
	    DATETIME created_at
	    DATETIME updated_at
    }

    class WhiteboardAPIData {
	    PK id_WhiteboardAPIData INT NOT NULL
	    VARCHAR channel_Name
	    VARCHAR project_Name
	    VARCHAR App_Identifier
	    TEXT SDK_Token
	    DATETIME created_at
	    DATETIME updated_at
    }

    class ChatAPIData {
	    PK id_ChatAPIData INT NOT NULL
	    FK id_User
	    VARCHAR chat_User_Temp_Token
	    VARCHAR chat_App_Temp_Token
	    VARCHAR AppKey
	    VARCHAR OrgName
	    VARCHAR AppName
	    DATETIME created_at
	    DATETIME updated_at
    }

    class APIData {
	    PK id_APIData INT NOT NULL
	    FK id_User INT NOT NULL
	    FK id_CallsAPIData INT
	    FK id_WhiteboardAPIData INT
	    FK id_ChatAPIData INT
	    VARCHAR management_Status
	    DATETIME created_at
	    DATETIME updated_at
    }

    class ManagementStatus {
	    PK id_ManagementStatus INT NOT NULL
	    VARCHAR status_Name
	    TEXT description
	    DATETIME created_at
	    DATETIME updated_at
    }

    class ComplaintResolution {
	    PK id_ComplaintResolution INT NOT NULL
	    FK complaint_Id INT NOT NULL
	    FK admin_User_Id INT NOT NULL
	    VARCHAR resolution_Status
	    TEXT resolution_Notes
	    DATETIME resolved_At
	    DATETIME created_at
	    DATETIME updated_at
    }

    class Message {
	    PK id_Message INT NOT NULL
	    FK sender_User_Id INT NOT NULL
	    FK receiver_User_Id INT NOT NULL
	    TEXT message_Content
	    BOOLEAN is_Read
	    DATETIME sent_At
	    DATETIME read_At
    }

	%% --- Pagamentos: Wallets, Transactions, TopUps, Withdrawals ---
	class Wallet {
		PK id_Wallet INT NOT NULL
		owner_type : user | professor
		FK owner_user_id INT NOT NULL
		DECIMAL balance
		DECIMAL hold_amount
		VARCHAR currency
		DATETIME created_at
		DATETIME updated_at
	}

	class Transaction {
		PK id_Transaction INT NOT NULL
		FK wallet_id INT NOT NULL
		transaction_type : topup | payment | payout | refund | commission | fee
		DECIMAL amount
		DECIMAL balance_before
		DECIMAL balance_after
		FK related_id INT
		status : pending | completed | failed
		DATETIME created_at
	}

	class TopUp {
		PK id_TopUp INT NOT NULL
		FK wallet_id INT NOT NULL
		FK payment_method_id INT
		DECIMAL amount
		provider_reference VARCHAR
		topup_type : card | bank | promo
		status : pending | completed | failed
		DATETIME created_at
	}

	class PaymentMethod {
		PK id_PaymentMethod INT NOT NULL
		owner_type : user | professor
		FK owner_user_id INT
		method_type : card | bank_account
		masked_details VARCHAR
		provider_token VARCHAR
		DATETIME created_at
	}

	class PaymentProvider {
		PK id_PaymentProvider INT NOT NULL
		VARCHAR name
		VARCHAR config_info
	}

	class ReservationPayment {
		PK id_ReservationPayment INT NOT NULL
		FK reservation_id INT NOT NULL
		FK payer_wallet_id INT NOT NULL
		FK transaction_id INT
		DECIMAL amount
		status : pending | paid | refunded
		DATETIME created_at
	}

	class WithdrawalRequest {
		PK id_WithdrawalRequest INT NOT NULL
		FK wallet_id INT NOT NULL
		DECIMAL requested_amount
		DECIMAL fee_amount
		DECIMAL net_amount
		FK payment_method_id INT
		FK payment_provider_id INT
		FK withdrawal_policy_id INT
		status : pending | requires_approval | processed | rejected
		DATETIME requested_at
		DATETIME processed_at
		FK processed_by_user_id INT
	}

	class Payout {
		PK id_Payout INT NOT NULL
		FK withdrawal_request_id INT
		FK transaction_id INT
		DECIMAL gross_amount
		DECIMAL provider_fee_amount
		DECIMAL platform_fee_amount
		DECIMAL net_amount
		status : pending | completed | failed
		DATETIME processed_at
	}

	class WithdrawalPolicy {
		PK id_WithdrawalPolicy INT NOT NULL
		FK payment_provider_id INT
		DECIMAL min_amount
		DECIMAL min_balance_after
		DECIMAL fixed_fee
		DECIMAL percent_fee
		BOOLEAN active
		DATETIME effective_from
		DATETIME effective_to
		VARCHAR note
	}

	class Refund {
		PK id_Refund INT NOT NULL
		FK transaction_id INT NOT NULL
		FK to_wallet_id INT NOT NULL
		DECIMAL amount
		status : pending | completed | failed
		DATETIME created_at
	}

	class Dispute {
		PK id_Dispute INT NOT NULL
		FK transaction_id INT NOT NULL
		FK raised_by_user_id INT
		TEXT reason
		status : open | resolved | rejected
		resolution_note TEXT
		DATETIME created_at
	}

    User "1" --> "1" Roles : has role
    User "1" --> "0..1" Professor : could be a
    User "1" --> "*" Notification : receives
    User "1" --> "*" Complaint : sends
    User "1" --> "0..1" Complaint : could receive
    Complaint "1" --> "0..1" ComplaintResolution : is resolved by
    User "1" --> "*" ComplaintResolution : resolves
    User "1" --> "1" APIData : User Admin manages
    APIData "1" --> "0..1" CallsAPIData : includes
    APIData "1" --> "0..1" WhiteboardAPIData : includes
    User "1" --> "0..1" ChatAPIData : have a personal
    APIData "1" --> "1" ManagementStatus : has status
    Professor "1" <-- "1" APIData : belongs to a
    Professor "1" -- "*" Message : sends and receives
    User "1" -- "*" Message : sends (as student) and receives (as student)
    Professor "1" -- "*" Course : contains
    Professor "1" -- "*" Certificate : owns
    Professor "1" -- "*" ScheduleBlock : creates
    Day "1" -- "*" ScheduleBlock : has
    ScheduleBlock "1" -- "*" BlockPart : contains
    Professor "1" -- "*" ExceptionRule : defines
    Professor "1" -- "*" Lesson : creates
    Course "1" -- "*" Lesson
    Tutoring_Type "1" -- "*" Lesson : classifies
    Lesson "1" -- "*" Reservation
    User "1" -- "*" Reservation
    Reservation "*" -- "1" Lesson
    Reservation "1" -- "*" ExceptionRequest : may_have
    User "1" -- "*" ExceptionRequest
    Professor "1" -- "*" ExceptionRequest : reviews
    Lesson "1" -- "*" LessonScheduleBlock
    ScheduleBlock "1" -- "*" LessonScheduleBlock
    LessonScheduleBlock "*" -- "0..1" BlockPart
    Reservation "0..1" -- "1" LessonScheduleBlock : uses
    Lesson "1" -- "*" Enrollment
    User "1" -- "*" Enrollment
    Lesson "1" -- "0..1" LessonPrice_BySession
    Lesson "1" -- "0..1" LessonPrice_ByStudent
    Lesson "1" -- "0..1" LessonPrice_Per_Student_Variable
    Lesson "*" -- "1" Pricing_Model : uses

	%% Relações financeiras / pagamentos
	User "1" -- "1" Wallet : has
	Wallet "1" -- "*" Transaction
	Wallet "1" -- "*" TopUp
	Wallet "1" -- "*" WithdrawalRequest
	Wallet "1" -- "*" ReservationPayment : pays
	PaymentMethod "1" -- "*" TopUp
	PaymentProvider "1" -- "*" PaymentMethod
	PaymentProvider "1" -- "*" WithdrawalPolicy
	Transaction "1" -- "0..1" Refund
	Transaction "1" -- "0..1" Dispute
	ReservationPayment "1" -- "1" Transaction : records
	WithdrawalRequest "1" -- "0..1" Payout

	%% Payment ⇄ Domain explicit links
	Reservation "1" -- "1" ReservationPayment : for_reservation
	ReservationPayment "1" -- "1" Wallet : payer_wallet
	Refund "1" -- "1" Wallet : to_wallet
	Dispute "1" -- "1" User : raised_by
	TopUp "1" -- "0..1" Transaction : creates
	PaymentMethod "1" -- "1" User : owner
	CommissionRule "*" -- "1" Professor
	CommissionRule "0..1" -- "*" ReservationPayment : applies_to

	class User:::Sky
	class Roles:::Sky
	class Professor:::Sky
	class Course:::Sky
	class Certificate:::Sky
	class Tutoring_Type:::Class_02
	class Pricing_Model:::Class_01
	class Day:::Ash
	class ScheduleBlock:::Ash
	class BlockPart:::Ash
	class Lesson:::Class_02
	class LessonPrice_BySession:::Class_01
	class LessonPrice_ByStudent:::Class_01
	class LessonPrice_Per_Student_Variable:::Class_01
	class Enrollment:::Class_02
	class LessonScheduleBlock:::Ash
	class Reservation:::Ash
	class ExceptionRequest:::Ash
	class ExceptionRule:::Ash
	class Notification:::Peach
	class Complaint:::Peach
	class CallsAPIData:::Rose
	class WhiteboardAPIData:::Rose
	class ChatAPIData:::Rose
	class APIData:::Rose
	class ManagementStatus:::Rose
	class ComplaintResolution:::Peach
	class Message:::Rose
	class Wallet:::Class_Pay
	class Transaction:::Class_Pay
	class TopUp:::Class_Pay
	class PaymentMethod:::Class_Pay
	class PaymentProvider:::Class_Pay
	class ReservationPayment:::Class_Pay
	class WithdrawalRequest:::Class_Pay
	class Payout:::Class_Pay
	class WithdrawalPolicy:::Class_Pay
	class Refund:::Class_Pay
	class Dispute:::Class_Pay

	classDef Sky :,stroke-width:1px,stroke-dasharray:none,stroke:#374D7C,fill:#E2EBFF,color:#374D7C,stroke-width:1px,stroke-dasharray:none,stroke:#374D7C,fill:#E2EBFF,color:#374D7C,stroke-width:1px,stroke-dasharray:none,stroke:#374D7C,fill:#E2EBFF,color:#374D7C,stroke-width:1px,stroke-dasharray:none,stroke:#374D7C,fill:#E2EBFF,color:#374D7C,stroke-width:1px,stroke-dasharray:none,stroke:#374D7C,fill:#E2EBFF,color:#374D7C
	classDef Peach :,stroke-width:1px,stroke-dasharray:none,stroke:#FBB35A,fill:#FFEFDB,color:#8F632D,stroke-width:1px,stroke-dasharray:none,stroke:#FBB35A,fill:#FFEFDB,color:#8F632D,stroke-width:1px,stroke-dasharray:none,stroke:#FBB35A,fill:#FFEFDB,color:#8F632D
	classDef Rose :,stroke-width:1px,stroke-dasharray:none,stroke:#FF5978,fill:#FFDFE5,color:#8E2236,stroke-width:1px,stroke-dasharray:none,stroke:#FF5978,fill:#FFDFE5,color:#8E2236,stroke-width:1px,stroke-dasharray:none,stroke:#FF5978,fill:#FFDFE5,color:#8E2236,stroke-width:1px,stroke-dasharray:none,stroke:#FF5978,fill:#FFDFE5,color:#8E2236,stroke-width:1px,stroke-dasharray:none,stroke:#FF5978,fill:#FFDFE5,color:#8E2236,stroke-width:1px,stroke-dasharray:none,stroke:#FF5978,fill:#FFDFE5,color:#8E2236
	classDef Ash :,stroke-width:1px,stroke-dasharray:none,stroke:#999999,fill:#EEEEEE,color:#000000,stroke-width:1px,stroke-dasharray:none,stroke:#999999,fill:#EEEEEE,color:#000000,stroke-width:1px,stroke-dasharray:none,stroke:#999999,fill:#EEEEEE,color:#000000,stroke-width:1px,stroke-dasharray:none,stroke:#999999,fill:#EEEEEE,color:#000000,stroke-width:1px,stroke-dasharray:none,stroke:#999999,fill:#EEEEEE,color:#000000,stroke-width:1px,stroke-dasharray:none,stroke:#999999,fill:#EEEEEE,color:#000000,stroke-width:1px,stroke-dasharray:none,stroke:#999999,fill:#EEEEEE,color:#000000,stroke-width:1px,stroke-dasharray:none,stroke:#999999,fill:#EEEEEE,color:#000000
	classDef Class_01 :,stroke-width:1px,stroke-dasharray:0,stroke:#00C853,fill:#9cd6b4,stroke-width:1px,stroke-dasharray:0,stroke:#00C853,fill:#9cd6b4,stroke-width:1px,stroke-dasharray:0,stroke:#00C853,fill:#9cd6b4,stroke-width:1px,stroke-dasharray:0,stroke:#00C853,fill:#9cd6b4,stroke-width:1px,stroke-dasharray:0,stroke:#00C853,fill:#9cd6b4
	classDef Class_02 :,stroke:#AA00FF,fill:#ac97b6,stroke:#AA00FF,fill:#ac97b6,stroke:#AA00FF,fill:#ac97b6,stroke:#AA00FF,fill:#ac97b6,stroke:#AA00FF,fill:#ac97b6
	classDef Class_Pay :,stroke-width:1px,stroke-dasharray:none,stroke:#8A3FFC,fill:#F3E8FF,color:#3F1B66